<resources>
    <string name="app_name">Frame Layout</string>
    <string name="heloo">FLayout</string>
    <string name="turn_on">Turn on</string>
    <string name="nhap_a">Nhap a</string>
    <string name="register">Register new Account</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="email">Nhập email</string>
    <string name="email_input">Email</string>
    <string name="chon">Bạn chọn cái gì ?</string>
    <string name="kkk">Đang chờ bạn chọn...</string>
    <string name="next">Chơi lại</string>
</resources>