<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/categories">
    </ImageView>

    <TextView
        android:id="@+id/email"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:layout_marginTop="5dp"
        android:text="@string/email_input"
        android:textSize="20sp">
    </TextView>
    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/email">
    </EditText>

    <Button
        android:id="@+id/buton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#6C6262"
        android:text="@string/login"></Button>

    <Button
        android:id="@+id/buton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit"
        android:backgroundTint="#6C6262"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/buton12"
        android:text="@string/cancel">
    </Button>

    <Button
        android:id="@+id/butonbottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:backgroundTint="#6C6262"
        android:text="@string/register">
    </Button>
</RelativeLayout>